--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build ./DockerFiles --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build ./Docker --file Dockerfile --tag my-first-image:$(date +%s)
