--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -38,7 +38,8 @@ jobs:
         uses: actions/checkout@v3
         
       - name: Get into the diesctory
-        run: cd Docker
+        run: cd Docker && ls
+        timeout-minutes: 1
 
       # Install the cosign tool except on PR
       # https://github.com/sigstore/cosign-installer
