--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         
-      - name: Get into the diesctory
+      - name: Get into the directory
         run: cd Docker && ls
         timeout-minutes: 1
 
@@ -71,6 +71,9 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          
+      - name: Check to see if we are in the right directory
+        run: ls
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
