--- a/.github/workflows/dockerslim.yml
+++ b/.github/workflows/dockerslim.yml
@@ -23,4 +23,4 @@ jobs:
       run: ls && docker build -t akhaneducation/my-first-image .
       
     - name: Build and optimise
-      run: docker images && docker-slim --debug build akhaneducation/my-first-image
+      run: docker images && docker-slim --debug build akhaneducation/my-first-image --show-clogs
