--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "prettify": "prettier -l --write \"**/*.js\"",
+    "prettify": "prettier -l --write \"**/*.js\" --ignore-path .gitignore",
     "test": "jest",
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
     "express": "^4.17.1",
     "mysql": "^2.17.1",
-    "sqlite3": "^5.1.6",
+    "sqlite3": "^5.1.7",
     "uuid": "^9.0.1",
-    "wait-port": "^1.1.0"
+    "wait-port": "^1.1.0",
+    "helmet": "^7.1.0",
+    "csurf": "^1.11.0"
   },
   "resolutions": {
     "ansi-regex": "5.0.1"
