--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "prettify": "prettier -l --write \"**/*.js\" --ignore-path .gitignore",
-    "test": "jest",
-    "dev": "nodemon src/index.js"
+    "format": "prettier -l --write \"**/*.js\" --ignore-path .gitignore",
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "dependencies": {
+    "csurf": "^1.11.0",
     "express": "^4.17.1",
+    "helmet": "^7.1.0",
     "mysql": "^2.17.1",
     "sqlite3": "^5.1.7",
     "uuid": "^10.0.0",
-    "wait-port": "^1.1.0",
-    "helmet": "^7.1.0",
-    "csurf": "^1.11.0"
+    "wait-port": "^1.1.0"
   },
   "resolutions": {
     "ansi-regex": "5.0.1"
@@ -31,5 +31,6 @@
     "jest": "^29.7.0",
     "nodemon": "^3.0.3",
     "prettier": "^3.3.3"
-  }
+  },
+  "packageManager": "yarn@1.22.22"
 }
