--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "101-app",
+  "name": "express-todo-app",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "main": "src/index.js",
+  "license": "Apache-2.0",
   "scripts": {
     "format": "prettier -l --write \"**/*.js\" --ignore-path .gitignore",
     "dev": "nodemon src/index.js",
     "start": "node src/index.js"
   },
   "dependencies": {
-    "csurf": "^1.11.0",
     "express": "^4.17.1",
     "helmet": "^7.1.0",
     "mysql": "^2.17.1",
@@ -22,13 +21,12 @@
   },
   "prettier": {
     "trailingComma": "all",
-    "tabWidth": 4,
+    "tabWidth": 2,
     "useTabs": false,
     "semi": true,
     "singleQuote": true
   },
   "devDependencies": {
-    "jest": "^29.7.0",
     "nodemon": "^3.0.3",
     "prettier": "^3.3.3"
   },
